--- a/stylesheet.css
+++ b/stylesheet.css
@@ -152,7 +152,9 @@ span.badge {
   border-radius: 10rem;
 }
 
-#mmvst_globe_container {
-    width: 200px;
-    height: 200px;
-}
+<style>
+    #mmvst_globe {
+        width: 300px; /* 设置地球的宽度 */
+        height: 300px; /* 设置地球的高度 */
+    }
+</style>
